--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "tailwind-lerp-colors": "^1.2.6",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
